[build-system]
requires = ["setuptools >= 42"]
build-backend = "setuptools.build_meta"

[project]
name = "undrdg"
authors = [
    {name = "Alexandre Marcireau", email = "alexandre.marcireau@gmail.com"}
]
description = "Generate datasets compatible with UNDR"
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = ["undr"]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "undrdg.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.isort]
profile = "black"
