[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "undrdg"
authors = [
    {name = "Alexandre Marcireau", email = "alexandre.marcireau@gmail.com"}
]
description = "Generate datasets compatible with UNDR"
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["undr"]
dynamic = ["version", "readme"]

[tool.setuptools.dynamic]
version = {attr = "undrdg.version.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.isort]
profile = "black"
